--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -6,8 +6,8 @@
   <body>
 
       <div id="app">
-        <div class="loading noBackground">
-          <h2>loading...</h2>
+        <div class="loading noBackground"> 
+          {% include spinner.svg %}          
         </div>
       </div>
 
