--- a/_sass/_dsgeneric.scss
+++ b/_sass/_dsgeneric.scss
@@ -376,10 +376,11 @@ svg {
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: 1fr 7fr 1fr;
         margin-top: 5%;
-        &:hover{
-            .logoRoller{
-                span{
-                    svg, p{
+        &:hover {
+            .logoRoller {
+                span {
+                    svg,
+                    p {
                         animation-play-state: paused !important;
                     }
                 }
@@ -422,12 +423,13 @@ svg {
                 span p {
                     animation-play-state: paused !important;
                 }
-                ~.logoRoller  {
-                    span{
-                        svg, p{
+                ~.logoRoller {
+                    span {
+                        svg,
+                        p {
                             animation-play-state: paused !important;
                         }
-                    } 
+                    }
                 }
             }
             span {
@@ -600,16 +602,18 @@ svg {
     }
     h2 {
         grid-area: h2;
-        font-size: 9rem;
         color: white;
         font-family: 'Eurostile LT', sans-serif;
         font-weight: bold;
+        font-size: 7rem;
         margin-top: 10%;
         line-height: .9;
-        padding-left: 0;
+        max-width: 460px;
         display: block;
-        text-align: left;
-        &:after{
+        width: 100%;
+        align-self: flex-start;
+        justify-self: flex-start;
+        &:after {
             display: none;
         }
     }
@@ -870,4 +874,44 @@ svg {
     background-color: rgba(0, 0, 0, 0.4);
     transition: .3s ease all;
     z-index: 2;
+}
+
+.noBackground {
+    display: flex;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    flex-direction: column;
+    width: 100%;
+    height: 200px;
+    align-items: center;
+    justify-content: center;
+    h2 {
+        font-weight: 100;
+        text-decoration: none;
+        font-size: 1.5rem;
+        &:before {
+            display: none;
+        }
+        &:after {
+            display: none;
+        }
+    }
+    svg {
+        width: 50px;
+        height: 50px;
+        animation: tick-tock 800ms steps(8, end) infinite;
+        transform-origin: 50% 50%;
+        & * {
+            fill: $brand-main-color !important;
+        }
+    }
+}
+
+@keyframes tick-tock {
+    to {
+        transform: rotate(360deg);
+    }
 }
