--- a/_layouts/notfound.html
+++ b/_layouts/notfound.html
@@ -7,13 +7,10 @@
   {{ content }}
     <div id="layout">
       <div class="loading noBackground">
-        <img src="assets/img/layout/logo.svg"/>
-        <img src="assets/img/layout/type.svg"/>
-        <h2>loading...</h2>
+        {% include spinner.svg %}   
       </div>
     </div>
     <script type="text/javascript" src="/assets/js/notfound.js" charset="utf-8"></script>
-    <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
   </body>
 
 </html>
