--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -40,6 +40,9 @@
             }
         }
     }
+    .headerWrapper nav {
+        margin-left: -31%;
+    }
     .overVideo .firstGrid {
         grid-template-columns: 1fr 1fr .4fr;
     }
@@ -150,7 +153,22 @@
 }
 
 @include media-query(1000px) {
-    .overVideo {
+
+    #rebranding{
+        p{
+            padding: 0 4%;
+            margin-bottom: 12%;
+        }
+    }
+    #communication{
+        h2, p{
+            padding: 0 4%;
+        }
+    }
+    #homevideo {
+        opacity: 0.85;
+    }
+    .overvideo {
         .screen {
             align-items: center;
             justify-content: center;
@@ -308,8 +326,23 @@
             }
         }
     }
+    h2,
+    h3 {
+        &:before,
+        &:after {
+            display: none;
+        }
+        text-decoration: underline;
+        padding-left: 0;
+        display: block;
+        text-decoration-color: $brand-main-color;
+    }
     h2 {
-        padding-left: 4%;
+        font-size: 4rem;
+    }
+    h3 {
+        display: block;
+        font-size: 3rem;
     }
     .processContainer {
         .processList {
@@ -416,15 +449,35 @@
     }
     header {
         height: 55px;
+        &.headerScroll {
+            .headerWrapper {
+                #hamburger {
+                    stroke: white;
+                }
+                .designSuccessLogoMobile * {
+                    fill: white;
+                }
+            }
+        }
         .headerWrapper {
             height: 55px;
             padding: 8px 4% 8px 4%;
             align-items: flex-start;
             grid-template-columns: repeat(4, 1fr);
+            &.active {
+                #hamburger {
+                    stroke: white;
+                }
+                .designSuccessLogoMobile * {
+                    fill: white;
+                }
+            }
             #hamburger {
                 display: flex;
+                stroke: black;
                 grid-column: 4 / span 1;
                 justify-self: flex-end;
+                transition: .3s ease transform, 100ms 0ms ease stroke;
             }
             .websiteLogo {
                 width: 150px;
@@ -435,6 +488,10 @@
             }
             .designSuccessLogoMobile {
                 display: flex;
+                transition: .3s ease all;
+                & * {
+                    fill: black;
+                }
             }
             nav {
                 position: fixed;
@@ -448,6 +505,7 @@
                 background-color: black;
                 transform: translateX(-100%);
                 transition: 0.3s ease all;
+                margin-left: 0;
                 &.active {
                     transform: translateX(0);
                 }
@@ -457,6 +515,7 @@
                     align-items: flex-start;
                     li a {
                         font-size: 5rem;
+                        color: white;
                     }
                 }
             }
@@ -523,9 +582,28 @@
             }
         }
     }
+    section {
+        padding: 8% 4% 2% 4%;
+    }
 }
 
 @include media-query(900px) {
+    .rippleGram {
+         display: none;
+        &.mobile{
+          display: flex;
+        }
+      }
+    .whiteRebranding{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        padding: 4% 4% 12% 4%;
+        img{
+            margin-bottom: 4%;
+        }
+    }
     .sectionContainer {
         padding: 0 5%;
         .sectionList {
@@ -540,9 +618,18 @@
     .processContainer .process .processIcon {
         transform: translateY(-10%);
     }
+    #communication .videoGrid .video {
+        min-height: 250px;
+    }
 }
 
 @include media-query(800px) {
+    html {
+        font-size: 50%;
+    }
+    section p {
+        font-size: 2.7rem;
+    }
     .screen7 .inMenu {
         display: flex;
         flex-direction: column;
