no break in block headings

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -178,7 +178,7 @@ section {
 h2,
 h3 {
   text-align: center;
-  display: flex;
+  display: block;
   font-size: 6rem;
   font-weight: 600;
   font-family: $secondary-font-family;
