--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -212,6 +212,9 @@ h3 {
 
 .rippleGram {
   padding: 4% 0 8% 0;
+  min-width: 1000px;
+  min-height: 627px;
+  align-self: center;
   &.mobile{
     display: none;
   }
